Image alignment fix

--- a/style.scss
+++ b/style.scss
@@ -5,7 +5,7 @@
     text-align: center;
 
     .image-caption {
-        color: $grey-color;
+        color: $darkGray;
         margin-top: $spacing-unit / 3;
     }
 }
